--- a/templates/events/detail.html
+++ b/templates/events/detail.html
@@ -1,13 +1,22 @@
-<h1>{{ question.question_text }}</h1>
+<h3>{{ question.question_text }}</h3>
+Number: {{ question.number }}<br>
+Difficulty: {{ question.difficulty }}<br>
+<!--Method: {{ question.method }}<br>-->
+<!--{{ question.note }}<br>-->
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="{% url 'events:vote' question.id %}" method="post">
 {% csrf_token %}
-{% for choice in question.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-{% endfor %}
+<!--{% for choice in question.choice_set.all %}-->
+    <!--<input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />-->
+    <!--<label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />-->
+<!--{% endfor %}-->
+Method: <input type="text" name="method" value="{{ question.method }}" /> <br>
+Note: <input type="text" name="note" value="{{ question.note }}" />
+
 </br>
-<input type="submit" value="Vote" />
+<input type="submit" value="Add" />
 </form>
+
+<a href="\events\">Go back</a>
