--- a/templates/events/results.html
+++ b/templates/events/results.html
@@ -1,9 +1,4 @@
-<h1>{{ question.question_text }}</h1>
-
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
-
-<a href="{% url 'events:detail' question.id %}">Vote again?</a>
+<h3>{{ question.question_text }}</h3>
+Frequencies: {{ question.frequencies }}
+<br>
+<a href="\events\">Go back</a>
