--- a/templates/events/index.html
+++ b/templates/events/index.html
@@ -1,3 +1,12 @@
+<style>
+    ul
+    {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+</style>
+<title>Event logging system</title>
 {% if question_list %}
     <ul>
     {% for question in question_list %}
